--- a/src/main/resources/templates/previewAmount.html
+++ b/src/main/resources/templates/previewAmount.html
@@ -943,7 +943,7 @@
                 <input type="checkbox" id="conformticket" name="conformticket" required>
                 <label for="conformticket">
                     <span>*Confirm ticket using PNR verify:</span>
-                    <a href="https://www.indianrail.gov.in/enquiry/PNR/PnrEnquiry.html?locale=en" target="_blank">Click Here</a>
+                    <a href="https://www.indianrail.gov.in/enquiry/PNR/PnrEnquiry.html?locale=en" target="_blank">Click Here <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </label>
             </div>
         </div>
