--- a/src/main/resources/templates/sellTicket1.html
+++ b/src/main/resources/templates/sellTicket1.html
@@ -556,7 +556,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="journeyDate">Journey Date</label>
+                    <label for="journeyDate">Journey Date (MM/DD/YYYY)</label>
                     <input type="date" id="journeyDate" name="journeyDate" th:min="${T(java.time.LocalDate).now()}" required>
                 </div>
 
@@ -1089,6 +1089,8 @@
             });
         }
     };
+    
+    
 </script>
 </body>
 </html>
